<resources>
    <string name="app_name">FirstApp</string>
    <string name="profile_picture">Profile picture</string>
    <string name="pull_down_to_refresh_btn">Pull Down to Refresh</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection_description">Slow or no internet connection. Please check your internet settings</string>
    <string name="whoops">Whoops</string>
    <string name="no_internet_connection_image">No Internet Connection Image</string>
    <string name="readme">README</string>
    <string name="owner_dosen_t_have_description">Owner dosen\'t have description</string>
    <string name="android_background">android_background</string>
</resources>