<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repodetail_gradient_bg"
    tools:context=".ui.fragments.detailviewfragment.RepoDetailFragment">
    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_layout_height"
        android:fitsSystemWindows="true"
        android:background="@drawable/repodetail_gradient_bg">
    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
        android:background="@drawable/repodetail_gradient_bg"
        app:expandedTitleTextAppearance="@style/ExpandedAppBar"
        app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
        >
        <ImageView
            android:layout_marginTop="7dp"
            android:layout_width="@dimen/square_image_size"
            android:layout_height="@dimen/square_image_size"
            android:src="@drawable/repodetailimagebg"
            android:layout_gravity="center|end"
            android:contentDescription="@string/android_background"
            app:layout_collapseMode="parallax" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            android:background="@drawable/repodetail_gradient_bg"
            />


    </com.google.android.material.appbar.CollapsingToolbarLayout>
</com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestledScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scrollview_white_bg"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/repodetail_layout_bg"
            android:orientation="vertical">
    <com.example.firstapp.ui.views.RepoDetailView
        android:id="@+id/first_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        android:visibility="gone"
        tools:visibility="gone"
        app:contentPadding="10dp">

        <TextView
            android:id="@+id/title_readme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/readme" />

        <TextView
            android:id="@+id/content_readme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="35dp"
            tools:text="@string/no_internet_connection_description" />

    </androidx.cardview.widget.CardView>
            <FrameLayout
                android:layout_width="match_parent"
                android:paddingTop="50dp"
                android:layout_height="match_parent">
            <Button
                android:visibility="gone"
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:text="@string/tap_to_refresh_btn"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:paddingLeft="10dp"
                android:paddingBottom="15dp"
                android:layout_gravity="center"
                android:paddingRight="10dp"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />
            </FrameLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>